--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 STYLE_PATH=/home/user/jellyfin/config/custom-style.css
 JELLYFIN_BASE_URL=http://127.0.0.1:8096
 JELLYFIN_API_KEY=dasdas1d21adsa12d2334das
+IGNORE_SSL_ERRORS=false
